# Hash-Tree

./: .gitignore  Makefile.am  configure.ac
lib/: Errors.h  FileHashNode.cpp  FileHashNode.h  FileHashTree.cpp  FileHashTree.h  HashNode.cpp  HashNode.h  Logging.h  Makefile.am  util_marshal.cpp  util_marshal.h
src/: Makefile.am  main.cpp
test/: Makefile.am  TestFileDiff.cpp  TestFileTree.cpp  TestSerilize.cpp  TestSync.cpp
